Revision history for AM-Algorithm

{{$NEXT}}

3.08      2015-06-07 20:39:47+09:00 Asia/Tokyo
    fixed regression in XS (GH #42)
    added include_nulls, include_given, and linear flags to analogize.pl
3.07      2015-06-03 21:01:25+09:00 Asia/Tokyo
    Add detailed gang printing option to analogize
    Fix incorrect gang handling
    Fix for printing gangs with false values as feature names
3.06      2015-05-31 20:43:59+09:00 Asia/Tokyo
    Added analogize for command line classification
    Fixed POD inaccuracies
3.05      2014-10-19 20:53:02+09:00 Asia/Tokyo
    XS efficiency improvements, and tweaks in an attempt to comply with C89 and fix ActiveState builds.
3.04      2014-10-11 22:24:48+09:00 Asia/Tokyo
    Add random_outcome method, and improve documentation.
3.03      2014-09-23 21:22:31+09:00 Asia/Tokyo (TRIAL RELEASE)
    Update to API of Test::Class 1.00000
3.02      2014-05-17 16:06:25 Asia/Seoul
    test_in_data in Result changed to test_in_train
    'vars' in gang_effects return structure changed to 'features'
3.01      2014-05-15 21:18:29 Asia/Seoul
    Gang and analogical set structures changed to contain Item objects
    Unique id field added to Item
    analogical set structure changed to index on Item id for easy searching
3.00      2014-05-14 12:02:05 Asia/Seoul
    Stopped printing to amcpresults and terminal
    Switched to Log::Any
    Removed format variables and used Text::Table for reports
    Added Algorithm::AM::Result module
    Removed separate support for "short" and "long" outcomes
    Replaced Project with DataSet and Item
        - resulted in complete reorganization of everything
    Updated/rewrote all documentation
2.45      2014-02-11 21:27:02 America/Los_Angeles
    Fixed gang/grandtotal calculation bugs
    removed debug print statements!
2.44      2014-02-11 16:13:54 America/Los_Angeles
    Fix gangcount updating (bad loop bound)
2.43      2014-02-11 12:22:57 America/Los_Angeles
    reverse 2.42 (think I was wrong)